fixed the weird gap in the middle column on Chrome

--- a/wp-content/themes/mojintranet/assets/css/src/modules/_index_list.scss
+++ b/wp-content/themes/mojintranet/assets/css/src/modules/_index_list.scss
@@ -3,7 +3,7 @@
   margin-top: 0;
 
   .category-item {
-    margin-bottom: 20px;
+    padding-bottom: 20px;
     padding-top: 20px;
     padding-right: 20px;
   }
